Fixed request error in assessment index view

--- a/app/views/assessments/index.html.erb
+++ b/app/views/assessments/index.html.erb
@@ -22,8 +22,8 @@
     </tr>
     <% @assessment.each do |assessment| %>
       <% if can? :read, assessment %>
-        <td><%= assessment.name%></td>
-        <!-- <td><%#assessment.description %></td> -->
+        <td><%= assessment.name %></td>
+        <td><%= assessment.description %></td>
 
         <td class="actions">
 
@@ -38,14 +38,22 @@
             <%# link_to edit_clinical_site_path(site.id), :class => "btn btn-info action-small" do %>
                   <!-- <span class="small-btn-text">Edit</span> -->
                 <%# end %>
-
-          </td>
-          <td>
+        
+          <!-- Button to view assessment versions<%# link_to(), :class => "btn btn-info action-small"
+            +(assessment.assessment_versions.size > 0 ? "" : "disabled") do%>
+            <span class = "small-btn-text">Versions<span class = "badge"> <%# assessment.assessment_versions.size%></span>
+            </span>
+          <%#end%>
+            
+                -->  
+        
+        
             <%= button_to(assessment_delete_path(assessment.id), 
-              { class: "btn btn-default #{assessment.has_scores==false ? "" : "disabled"}"} ) do %>
+              { class: "btn btn-default #{assessment.has_scores==false ? "" : "disabled"}", method: :get}) do %>
               <span class="glyphicon glyphicon-trash"></span>
             <% end %> 
           </td>
+          
         </tr>
       <% end %>
     <% end %>
