--- a/app/views/pgps/index.html.erb
+++ b/app/views/pgps/index.html.erb
@@ -29,7 +29,7 @@
                <tr>
                 <td> <%= pgp.goal_name %></td>
                 <td> <%= pgp.created_at.strftime("%m/%d/%Y")%> </td>
-                          <td>
+                <td>
 
                 <% if pgp.goal_score == nil %>    
 
@@ -42,16 +42,23 @@
                 <% end %>
               </td>
 
-              <% end %>
-              </td>
-               </tr>
-               
-          
               <td class="actions">
                     <!-- buttons
                       details
                       updates
                       close isue -->
-    
+                <td>
+                    <%= link_to pgp_path(pgp.id), :class => "btn btn-info action-small" do %>
+                          </br><span class="small-btn-text">Details</span>
+                    <% end %>
+                </td>
+                <td>
+                  <%= button_to(pgp_path(pgp.id), { class: "btn btn-default", method: :delete, data: {confirm: "Are you sure you want to delete this professional growth plan?"}} ) do %>
+                     <span class="glyphicon glyphicon-trash"></span>
+                  <% end %>
+                </td>
+                </tr>
+            <% end %>
+            
       <% end %>
               
