--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -9,7 +9,7 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
 
-
+ *= require bootstrap3-switch
  *= require bootstrap-datepicker 
  *= require_self
  *= require nav_bar
