--- a/app/views/pgps/index.html.erb
+++ b/app/views/pgps/index.html.erb
@@ -33,9 +33,9 @@
               <%= link_to pgp_path(pgp.id), :class => "btn btn-info action-small" do %>
                 <span class="small-btn-text">Details</span>
                 <% end %>
-              <%= link_to("Score PGP", edit_pgp_path(pgp.id), :class => "action details btn btn-info action-small issues")%>
+              <%= link_to("Score PGP", new_pgp_pgp_score_path(pgp.id), :class => "action details btn btn-info action-small issues")%>
               
-              
+              <%= link_to("PGP Scores", pgp_pgp_scores_path(pgp.id), :class => "action details btn btn-info action-small issues")%>
               <td>
               <%= button_to(pgp_path(pgp.id), { class: "btn btn-default", method: :delete, data: {confirm: "Are you sure you want to delete this professional growth plan?"}} ) do %>
                 <span class="glyphicon glyphicon-trash"></span>
