Added edit feature for pgp details, fixed index for pgp_scores

--- a/app/views/pgps/show.html.erb
+++ b/app/views/pgps/show.html.erb
@@ -25,6 +25,8 @@
     <td class="wrap"><%= @pgp.plan %></td>
   </tr>
 
-
+</table></br>
+<table>
+   <%= link_to("Edit PGP", edit_pgp_path(@pgp.id), :class => "action details btn btn-info action-small issues")%>
 </table>
 
