Changed header on index view for pgp_scores

--- a/app/views/pgp_scores/index.html.erb
+++ b/app/views/pgp_scores/index.html.erb
@@ -9,7 +9,7 @@
         <table class="table table-striped">
           <div class="row">      
             <caption>
-              <div class="header1 col-xs-12">Professional growth plans scores for goal</div></br>
+              <div class="header1 col-xs-12">Professional growth plan scores</div></br>
 
               <div class="header2 col-xs-12"> <%= pluralize(@pgp.pgp_scores.size, "PGP score") + " found" %> </div>
                 <div class="col-xs-1">
