--- a/app/views/pgp_scores/index.html.erb
+++ b/app/views/pgp_scores/index.html.erb
@@ -28,13 +28,8 @@
               <tr>
                 <td> <%= pgp_score.goal_score %></td>
                 <td> <%= pgp_score.score_reason %></td>
-                <td> <%= pgp_score.created_at.strftime("%m/%d/%Y")%> </td>
-     
-                <td class="actions">
-                  
-                </td>
-              <% end %>
+                <td> <%= pgp_score.created_at%> </td>
               </tr>
-             
+             <% end %>
         </table>
       </div>
