--- a/app/views/assessment_versions/delete.html.erb
+++ b/app/views/assessment_versions/delete.html.erb
@@ -6,8 +6,8 @@
   <h2>Delete Assessment Version</h2>
 
   <%= form_for(:version, :url => {:action => 'destroy', :id => @version.id}) do |f| %>
-    <p><%= "Are you sure you want to delete this version of #{A}?" %></p>
-    <p><%= @version.name %> </p>
+    <p><%= "Are you sure you want to delete this version of #{@version.assessment.name}?" %></p>
+    <p><%= "Version #{@version.version_num}" %> </p>
    
     <div class="form-buttons">
         <tr>
