--- a/app/views/assessment_versions/_form.html.erb
+++ b/app/views/assessment_versions/_form.html.erb
@@ -2,12 +2,24 @@
     
     <tr>
       <th> <%= f.label(:assessment_id, "Assessment")%> </th>
-      <td> <%= f.select(:assessment_id, @assessments.map {|a| [a.name, a.id]}, {:prompt => 'Select an assessment'}) %></td>
+      <td> <%= f.select(:assessment_id, @assessments.map{ |a| ["#{a.name}", a.id]}, {:prompt => 'Select an assessment'}) %></td>
     </tr>
 
     <tr>
       <th> <%= f.label(:assessment_items, "Items")%> </th>
-      <td> <%= f.select(:assessment_items, @items.map {|i| [i.name, i.id]}, {:prompt => 'Select the items'}, {:multiple => true}) %></td>
+      <td><%= f.select(:assessment_items, @items.map{ |i| [i.name, i.id]}, 
+        {:prompt => 'Select the items'}, {:multiple => true}) %></td>
     </tr>
-  
-  </table>
+    
+    <tr>
+      <td><textarea cols="50" rows="20" name="Item Name" id="name_id" class="form-control" style="resize:vertical;display:none"></textarea></td>
+      <td><textarea cols="50" rows="20" name="Item Slug" id="slug_id" class="form-control" style="resize:vertical;display:none"></textarea></td>
+    </tr>
+    
+    <tr>
+      <td>
+        <button class="show_button"><b>Add new Item</b></button>
+        <script>$(".show_button").click(function(){$("#name_id", "#slug_id).toggle()})</script>
+      </td>  
+      
+    </tr>
