--- a/app/views/adm_tep/index.html.erb
+++ b/app/views/adm_tep/index.html.erb
@@ -11,26 +11,26 @@
 
   <% end %>
 
-  <div class="container-fluid">        
+  <div class="container-fluid">
 
     <table class="listing summary adm_tep list table table-striped">
-   
-      <caption>        
-          <div class="row">          
+
+      <caption>
+          <div class="row">
             <div class="header1 col-xs-12">
                Applications to TEP: <%= @term.PlainTerm%>
              </div></br>
              <div class="header2 col-xs-12">
-               <%= pluralize(@applications.size, 'application') %>  found 
+               <%= pluralize(@applications.size, 'application') %>  found
              </div></br>
-           
-     
-            <div class="col-xs-12">           
-              <%= link_to new_adm_tep_path, :class => "btn btn-info glyphicon glyphicon-plus action-large" do %>  
+
+
+            <div class="col-xs-12">
+              <%= link_to new_adm_tep_path, :class => "btn btn-info glyphicon glyphicon-plus action-large" do %>
                  <span class="large-btn-text">Add New Student</span>
-              <% end %>    
+              <% end %>
             </div>
-          </div>  
+          </div>
 
 
       </caption>
@@ -41,14 +41,12 @@
               <th>First Name</th>
               <th>Last Name</th>
               <th>Program</th>
-              <th>GPA</th>
-              <th>GPA (Last 30 Credit Hours)</th>      
-              <th>Praxis Pass</th>       
+              <th> Sufficient GPA</th>
+              <th>Sufficient Credits</th>
+              <th>Praxis Pass</th>
               <th>Admit Date</th>
               <th>Admission Decision</th>
-              <th>Details</th>
-              <th>Delete</th>
-              <th>Letter</th>
+
 
             </tr>
         	<% @applications.each do |app|%>
@@ -57,26 +55,44 @@
   			<td><%= app.student.FirstName %></td>
   			<td><%= app.student.LastName %></td>
         <td><%= app.program.EDSProgName%> </td>
-        <td><%=app.GPA %></td>
-        <td><%=app.GPA_last30%></td>
+        <!-- <td><%=app.GPA %></td>
+        <td><%=app.GPA_last30%></td> -->
         <td>
-          <% if app.student.praxisI_pass %> 
-            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span> 
+          <% if app.good_gpa? %>
+
+            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+          <% else %>
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+          <% end %>
+         </td>
+
+        <td>
+          <% if app.good_credits? %>
+
+            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+          <% else %>
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+          <% end %>
+         </td>
+
+        <td>
+          <% if app.student.praxisI_pass %>
+            <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 
           <% else %>
-            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> 
+            <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
 
           <% end %>
 
           </td>
-        <td><%= app.TEPAdmitDate ? app.TEPAdmitDate.strftime("%m/%d/%Y") : nil%></td> 
+        <td><%= app.TEPAdmitDate ? app.TEPAdmitDate.strftime("%m/%d/%Y") : nil%></td>
 
   			<td class="actions">
               <!-- Display button for admission decision if
                   1) Student has no admission decision
                   2) we are currently inside a term
                   3) the term displayed is a current term.-->
-              <% if app.TEPAdmit == nil and @term = current_term(exact: false)%>    
+              <% if app.TEPAdmit == nil and @term = current_term(exact: false)%>
 
                 <%= link_to("Admission Decision", edit_adm_tep_path(app.id), :class => "action details btn btn-info action-small issues")%>
 
@@ -86,42 +102,42 @@
 
               <% end %>
         </td>
-        
-       
+
+
         <td>
           <%= link_to("Details", adm_tep_path(app.id), :class => "action details btn btn-info action-small issues")%>
         </td>
-        
+
         <td>
-          
-          <%= button_to(adm_tep_path(app.id), { class: "btn btn-default #{app.TEPAdmit==nil ? "" : "disabled" }", 
-          method: :delete, 
+
+          <%= button_to(adm_tep_path(app.id), { class: "btn btn-default #{app.TEPAdmit==nil ? "" : "disabled" }",
+          method: :delete,
           data: {confirm: "Are you sure you want to delete this application?"}} ) do %>
                       <span class="glyphicon glyphicon-trash"></span>
-                  <% end %> 
+                  <% end %>
           <!--Display button for deleting record
           # 1) Button in grey if decision has been made
           # 2) Button clickable if decision is nil-->
-          
+
         </td>
 
-        <% if app.student_file  %>      
-        
-        <td class="doc-download"> 
+        <% if app.student_file  %>
 
-              <%= link_to adm_tep_download_path(app.id), :class => "btn btn-default glyphicon glyphicon-file action-small" do %>
+        <td class="doc-download">
+
+              <%= link_to adm_tep_download_path(app.id), :class => "btn btn-default glyphicon glyphicon-paperclip action-small" do %>
               <% end %>
         </td>
-      
+
         <% end %>
 
         </tr>
           <!-- end of if statement for content-->
         	<% end %>
-            
+
       <!-- end of main loop -->
-      <% end %>   
+      <% end %>
 
     </table>
-  </div>   <!-- end container --> 
+  </div>   <!-- end container -->
 </div>
