add resources for majors_programs
lists associations between majors and programs

--- a/app/views/adm_tep/need_apply.html.erb
+++ b/app/views/adm_tep/need_apply.html.erb
@@ -25,7 +25,9 @@
         <th>Praxis Pass</th>
       </tr>
 
-      
+      <% @students.each do |s| %>
+        
+      <% end %>
 
 
     <% end %>
