--- a/app/views/pgps/index.html.erb
+++ b/app/views/pgps/index.html.erb
@@ -32,7 +32,7 @@
 
             <td>
               <% if pgp.latest_score.nil? %>    
-                  No Score
+                  Not Scored
               <% else %>
                   <%= pgp.latest_score.goal_score %>
               <% end %>
