Fix scoring errors in PGP view

--- a/app/views/pgp_scores/index.html.erb
+++ b/app/views/pgp_scores/index.html.erb
@@ -24,11 +24,13 @@
                 <th>Score Reason(s)</th>
                 <th>Date Scored</th>
               </tr>
-              <% @pgp.pgp_scores.each do |pgp_score| %>
+              <% @pgp_scores.each do |pgp_score| %>
+              
+              
               <tr>
                 <td> <%= pgp_score.goal_score %></td>
                 <td> <%= pgp_score.score_reason %></td>
-                <td> <%= pgp_score.created_at%> </td>
+                <td> <%= pgp_score.created_at.strftime("%m/%d/%Y")%> </td>
               </tr>
              <% end %>
         </table>
