--- a/app/views/pgps/edit.html.erb
+++ b/app/views/pgps/edit.html.erb
@@ -1,16 +1,10 @@
 <%= link_to pgp_path(@student), class: "btn btn-default back-link glyphicon glyphicon-arrow-left" do %>
   <i class=" link-text"> Back</i>
 <% end %>
-<%= form_for(@pgp, url: edit_pgp_path(@student.id)) do |f| %>
+<%= form_for(@pgp, url: pgp_path(@pgp.id)) do |f| %>
     
     <table summary="Edit PGP form fields">
-
-
-
-
-
-
-
+        
 	<%= render(partial: 'form', locals: {f: f}) %>
 	
 	<div class="form-buttons">
